tests/syntax_errors/test_7.tl
-- test case 17.
-- Description : nested whiles, but with an error

-- Expected : '2'
require "ifj21" 
 function mein() local myself :  string  = "me" while opposite(love, hate) == false and opposite(love, indifference) do  while opposite(art, ugliness) == false and opposite(art, indifference) do  while opposite(faith, heresy) == false and opposite(faith, indifference) do  while opposite(life, death) == false and opposite(life, indifference) do is_beautiful(life) end  end  end  end 
